2004-01-18  Jason Leach  <leach@wam.umd.edu>

	* Makefile.am (install-data-local): builddir != srcdir fix.

2004-01-12 Archana Shah <archana.shah@wipro.com>

	* gweather.h: Added a field in the structure GWeatherApplet for
	about dialog.
	* gweather-applet.c: (gweather-applet-create): Initialized
	about_dialog field with NULL.
	(applet_destroy): Destroys the about dialog when the applet is
	removed from the panel.
	* gweather-about.c: (gweather-about-run): Removed the static
	variable "about" and used structure member about_dialog in that place.
	Fixes bug #131073

2004-01-09  Kevin Vandersloot

	* weather.c: Format the forecast text to be more readable. Patch
	from Richard Kilgore. Fixes bug #130749

2004-01-09  Kaushal Kumar  <kaushal.kumar@wipro.com>

	* Locations: Updated ICAO location code for Charlottetown to CYYG 
	in the [CA_PE] section.
	Fixes bug #128569.

2003-12-13  Michael Terry <mterry@fastmail.fm>

       * GNOME_GWeatherApplet_Factory.server.in.in, Makefile.am,
       gweather-about.c, gweather-applet.c, weather.c: Move icons from
       built-in xpm pixmaps to gnome-icon-theme icons.  Fixes bug #124594.

2003-12-16  Kevin Breit <mrproper@ximian.com>

	* Locations: Added Wheeling, Illinois

2003-12-07  Kevin Vandersloot

	* weather.c: Fix different displays of temperature by using lrint 
	for the temp. Fixes bug #102338. Patch from hayastan132 hotmail com .

2003-12-03  Muktha  <muktha.narayan@wipro.com>
                                                                                
        * gweather-applet.c: Fix critical warnings when invoking
	help. Fixes bug #128364.

2003-11-30  Kevin Vandersloot

	* Locations: Fix misspellings in French cities. Fixes bug #124750. Patch
	by Stephane Jourdan

2003-11-16  Behdad Esfahbod

	* weather.c: Handled unknown values for almost all the fields in info
	  structure.

2003-10-31  Muktha  <muktha.narayan@wipro.com>

	* gweather-pref.c: Fix critical warnings when opening prefs window.
	Fixes bug #121868.
 