@@ -2404,22 +2404,22 @@ states=AU NZ
 
 [OZ_AU]
 name=Australia
-loc0=Adelaide YPAD ------ ---
-loc1=Alice\\ Springs YBAS ------ ---
-loc2=Brisbane YBBN ------ ---
+loc0=Adelaide YPAD @IDS10034 ---
+loc1=Alice\\ Springs YBAS @IDD10110 ---
+loc2=Brisbane YBBN @IDQ10090 ---
 loc3=Broome YBRM ------ ---
 loc4=Cairns YBCS ------ ---
-loc5=Canberra YSCB ------ ---
+loc5=Canberra YSCB @IDN10035 ---
 loc6=Christmas\\ Island YPXM ------ ---
-loc7=Cocos\\ Island YPCC ------ ---
+loc7=Cocos\\ Island YPCC @IDW10600 ---
 loc8=Dubbo YSDU ------ ---
-loc9=Hobart YMHB ------ ---
+loc9=Hobart YMHB @IDT16700 ---
 loc10=Learmouth YPLM ------ ---
-loc11=Melbourne YMML ------ ---
-loc12=Norfolk\\ Island YSNF ------ ---
-loc13=Perth YPPH ------ ---
+loc11=Melbourne YMML @IDV10450 ---
+loc12=Norfolk\\ Island YSNF @IDN10008 ---
+loc13=Perth YPPH @IDW12300 ---
 loc14=Port\\ Hedland YPPD ------ ---
-loc15=Sydney YSSY ------ ---
+loc15=Sydney YSSY @IDN10064 ---
 loc16=Townsville YBTL ------ ---
 
 [OZ_NZ]
