@@ -1,3 +1,11 @@
+2004-01-20  James Henstridge  <james@daa.com.au>
+
+	* Locations (name): add BOM report codes to various Australian
+	locations.
+
+	* weather.c (bom_start_open): Add support for downloading
+	forecasts from the Australian Bureau of Meteorology.
+
 2004-01-18  Jason Leach  <leach@wam.umd.edu>
 
 	* Makefile.am (install-data-local): builddir != srcdir fix.
@@ -41,7 +49,7 @@
 	for the temp. Fixes bug #102338. Patch from hayastan132 hotmail com .
 
 2003-12-03  Muktha  <muktha.narayan@wipro.com>
-                                                                                
+
         * gweather-applet.c: Fix critical warnings when invoking
 	help. Fixes bug #128364.
 
